# stremio-service

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  build-flatpak.sh  build-macos.rs  build.rs  com.stremio.Service.json  docker-compose.yml  generate_descriptor.js  sign.ps1  stremiover.js
.cargo/: config.toml
.github/workflows/: build.yml  copyright.yml  flatpak-release.yml  linux-release.yml  macos-release.yml  release.yml  windows-release.yml
docker/: Dockerfile  Dockerfile.light  README.md  docker-compose.yml
docker/nginx/: auth.conf  blocked_ips.conf  nginx.conf  scanner_block.conf
docker/nginx/http.d/: default.conf  https.conf
docker/scripts/: docker-entrypoint.sh  healthcheck.sh  ip-banner.sh
flatpak/: .gitignore  build.sh  com.stremio.Service.appdata.xml  com.stremio.Service.desktop  com.stremio.Service.json  flatpak-cargo-generator.py  stremio-service
resources/: appdmg.json  com.stremio.Service.json  com.stremio.service.desktop  com.stremio.service.metainfo.xml  resources.rc  resources.res  service.icns  stremio-runtime.rc  stremio-service  stremio.service
resources/certificates/: Certificates.p12
setup/: StremioService.iss
src/: app.rs  args.rs  cli.rs  config.rs  constants.rs  lib copy.rs  lib.rs  main.rs  server.rs  shared.rs  updater.rs  util.rs
src/app/: tray_menu.rs
src/service/: config.rs  main.rs  server.rs  updater.rs
src/updater/: config.rs  main.rs
tests/: copyright.rs
wix/: License.rtf  main.wxs
