[package]
name = "stremio-service"
version = "0.1.1"
edition = "2021"
authors = ["Stremio"]
description = "Freedom to Stream"
license = "MIT"
homepage = "https://stremio.com"
repository = "https://github.com/Stremio/stremio-service/"
readme = "README.md"

default-run = "stremio-service"

[features]
default = []
# Wheather or not we're running the app in a bundled (installed) mode.
#
# The binary location for "bundled" is system-wide, while non-bundled
# is locally inside `target/` and binaries paths will be based on
# the Cargo.toml location.
bundled = []

[dependencies]
# for MacOS application bundling
cargo_toml = "0.15"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Errors
anyhow = "1"

# Async executor
tokio = { version = "1.27", features = ["fs", "macros", "rt-multi-thread"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Application window manager
tao = { version = "0.19", features = ["tray"] }

# Home dir
dirs = "5.0"

fslock = "0.2"
image = "0.24"
once_cell = "1.16"

# Updater
semver = "1.0"

# Open default app
open = "4.1"
# http calls
reqwest = { version = "0.11", features = ["stream", "json"] }
# embedding files in binary
rust-embed = "6.4"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
serde_json = "1"

sha2 = "0.10"
hex = "0.4"
rand = "0.8"
url = { version = "2.3", features = ["serde"] }

urlencoding = "2.1"
zip-extract = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
# MacOS Apple Events handling
fruitbasket = "0.10"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
chrono = "0.4"

[build-dependencies]
bytes = "1.0"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
xz = "0.1.0"
zip-extract = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"

[package.metadata.deb]
copyright = "© 2022 Smart Code OOD"
extended-description = "Media Center"
depends = "$auto"
section = "Stremio;Media;Play;"
priority = "optional"
assets = [
    ["target/release/stremio-service", "/usr/bin/stremio-service/stremio-service", "755"],
    ["resources/bin/node", "/usr/bin/stremio-service/node", "755"],
    ["resources/bin/server.js", "/usr/bin/stremio-service/server.js", "755"],
    ["resources/bin/ffmpeg-linux", "/usr/bin/stremio-service/ffmpeg", "755"],
    ["resources/com.stremio.service.desktop", "/usr/share/applications/com.stremio.service.desktop", "644"],
    ["resources/com.stremio.service.svg", "/usr/share/icons/hicolor/scalable/apps/com.stremio.service.svg", "644"],
]
features = ["bundled"]

[package.metadata.generate-rpm]
# post_install_script = "gnome_version=$(gnome-shell --version  | awk '{print $NF}') && echo https://extensions.gnome.org/extension-data/appindicatorsupportrgcjonas.gmail.com.GNOME_VERSION.shell-extension.zip | sed -e s/GNOME_VERSION/$gnome_version/g"
assets = [
    { source = "target/release/stremio-service", dest = "/usr/bin/stremio-service/stremio-service", mode = "755" },
    { source = "resources/bin/node", dest = "/usr/bin/stremio-service/node", mode = "755" },
    { source = "resources/bin/ffmpeg-linux", dest = "/usr/bin/stremio-service/ffmpeg", mode = "755" },
    { source = "resources/bin/server.js", dest = "/usr/bin/stremio-service/server.js", mode = "755" },
    { source = "resources/com.stremio.service.desktop", dest = "/usr/share/applications/com.stremio.service.desktop", mode = "644" },
    { source = "resources/com.stremio.service.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.stremio.service.svg", mode = "644" },
]
features = ["bundled"]

[package.metadata.generate-rpm.requires]
libappindicator-gtk3 = "*"

[package.metadata.macos]
name = "StremioService"
display_name = "Stremio Service"
identifier = "com.stremio.service"
icon = ["resources/service.icns", "StremioService.icns"]
copyright = "Copyright © 2022 Smart Code OOD"
url_scheme = "stremio"
executable = "stremio-service"
bins = [
    ["target/release/stremio-service", "stremio-service"],
    ["resources/bin/node-macos", "node"],
    ["resources/bin/server.js", "server.js"],
    ["resources/bin/ffmpeg-macos", "ffmpeg"],
    ["resources/bin/ffprobe-macos", "ffprobe"]
]