# Copyright (C) 2017-2024 Smart Code OOD 203358507
[package]
name = "stremio-service"
version = "0.1.13"
edition = "2021"
authors = ["Stremio"]
description = "Stremio service - Freedom to Stream"
license = "GPL-2.0"
homepage = "https://stremio.com"
repository = "https://github.com/Stremio/stremio-service/"
readme = "README.md"

default-run = "stremio-service"

[package.metadata.server]
version = "v4.20.8"

[features]
default = []
# Wheather or not we're running the app in a bundled (installed) mode.
#
# The binary location for "bundled" is system-wide, while non-bundled
# is locally inside `target/` and binaries paths will be based on
# the Cargo.toml location.
bundled = []
# Will not download anything while building
offline-build = []

[dependencies]
# for MacOS application bundling
cargo_toml = "0.15"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Errors
anyhow = "1"

# Async executor
tokio = { version = "1.27", features = ["fs", "macros", "rt-multi-thread"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Application window manager
tao = { version = "0.19", features = ["tray"] }

# Home dir
dirs = "5.0"

fslock = "0.2"
image = "0.24"
once_cell = "1.16"

# Updater
semver = "1.0"

# Open default app
open = "4.1"
# http calls
reqwest = { version = "0.11", features = ["stream", "json"] }
# embedding files in binary
rust-embed = "6.4"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
serde_json = "1"

sha2 = "0.10"
hex = "0.4"
rand = "0.8"
url = { version = "2.3", features = ["serde"] }

urlencoding = "2.1"
zip-extract = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
# MacOS Apple Events handling
fruitbasket = "0.10"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
winres-edit = "0.1.0"
chrono = "0.4"
ico = "0.3.0"

[build-dependencies]
bytes = "1.0"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
xz = "0.1.0"
zip-extract = "0.1"

url = { version = "2.3" }
once_cell = "1.16"

serde = "1"

# For getting the Server.js version from this Cargo.toml file
cargo_toml = "0.15"

[dev-dependencies]
walkdir = "2.3.3"
regex = "1.8.3"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"

[package.metadata.deb]
copyright = "Copyright (C) 2017-2024 Smart Code OOD 203358507"
extended-description = "Media Center"
# depends = "$auto, ffprobe (>=4.2.7)"
depends = "$auto"
section = "Stremio;Media;Play;"
priority = "optional"
assets = [
    ["resources/stremio-service", "/usr/bin/stremio-service", "755"],
    ["target/release/stremio-service", "/usr/share/stremio-service/stremio-service", "755"],
    ["resources/bin/linux/stremio-runtime", "/usr/share/stremio-service/stremio-runtime", "755"],
    # We use a specific version of ffmpeg-jellyfin
    ["resources/bin/linux/ffmpeg", "/usr/share/stremio-service/ffmpeg", "755"],
    ["resources/bin/linux/ffprobe", "/usr/share/stremio-service/ffprobe", "755"],
    ["resources/bin/linux/server.js", "/usr/share/stremio-service/server.js", "755"],
    ["LICENSE.md", "/usr/share/stremio-service/LICENSE.md", "644"],
    ["resources/com.stremio.service.desktop", "/usr/share/applications/com.stremio.service.desktop", "644"],
    ["resources/com.stremio.service.metainfo.xml", "/usr/share/metainfo/com.stremio.service.metainfo.xml", "644"],
    ["resources/com.stremio.service.svg", "/usr/share/icons/hicolor/scalable/apps/com.stremio.service.svg", "644"],
]
features = ["bundled"]

[package.metadata.generate-rpm]
# post_install_script = "gnome_version=$(gnome-shell --version  | awk '{print $NF}') && echo https://extensions.gnome.org/extension-data/appindicatorsupportrgcjonas.gmail.com.GNOME_VERSION.shell-extension.zip | sed -e s/GNOME_VERSION/$gnome_version/g"
assets = [
    { source = "resources/stremio-service", dest = "/usr/bin/stremio-service", mode = "755" },
    { source = "target/release/stremio-service", dest = "/usr/share/stremio-service/stremio-service", mode = "755" },
    { source = "resources/bin/linux/stremio-runtime", dest = "/usr/share/stremio-service/stremio-runtime", mode = "755" },
    { source = "resources/bin/linux/ffmpeg", dest = "/usr/share/stremio-service/ffmpeg", mode = "755" },
    { source = "resources/bin/linux/ffprobe", dest = "/usr/share/stremio-service/ffprobe", mode = "755" },
    { source = "resources/bin/linux/server.js", dest = "/usr/share/stremio-service/server.js", mode = "755" },
    { source = "LICENSE.md", dest = "/usr/share/stremio-service/LICENSE.md", mode = "644" },
    { source = "resources/com.stremio.service.desktop", dest = "/usr/share/applications/com.stremio.service.desktop", mode = "644" },
    { source = "resources/com.stremio.service.metainfo.xml", dest = "/usr/share/metainfo/com.stremio.service.metainfo.xml", mode = "644" },
    { source = "resources/com.stremio.service.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.stremio.service.svg", mode = "644" },
]
# depends = "$auto, ffprobe (>=4.2.7)"
features = ["bundled"]

[package.metadata.generate-rpm.requires]
libappindicator-gtk3 = "*"
# ffprobe = ">=4.2.7"

[package.metadata.macos]
name = "StremioService"
display_name = "Stremio Service"
identifier = "com.stremio.service"
icon = ["resources/service.icns", "StremioService.icns"]
copyright = "Copyright (C) 2017-2024 Smart Code OOD 203358507"
url_scheme = "stremio"
executable = "stremio-service"
bins = [
    ["target/release/stremio-service", "stremio-service"],
    ["resources/bin/macos/stremio-runtime", "stremio-runtime"],
    ["resources/bin/macos/server.js", "server.js"],
    ["resources/bin/macos/ffmpeg", "ffmpeg"],
    ["resources/bin/macos/ffprobe", "ffprobe"],
    ["LICENSE.md", "LICENSE.md"]
]
